[gd_scene load_steps=5 format=2]

[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/CastleBGDay.png" type="Texture" id=2]
[ext_resource path="res://World/Levels/FOrest/CastleBackdrop.gd" type="Script" id=3]
[ext_resource path="res://World/CastleBGNight.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Day" type="Sprite" parent="."]
position = Vector2( 68, 90.6667 )
scale = Vector2( 1.41667, 1.41667 )
texture = ExtResource( 2 )

[node name="Night" type="Sprite" parent="."]
visible = false
position = Vector2( 68, 90.6667 )
scale = Vector2( 1.41667, 1.41667 )
texture = ExtResource( 4 )

[node name="Camera2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 72, 136 )
zoom = Vector2( 0.75, 0.75 )

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2( -87, 0 )

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 232, 181 )

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 78.0
margin_top = 118.0
margin_right = 193.0
margin_bottom = 132.0
text = "To be continued..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="Camera2D"]
